tests/fixtures/stl/errors/test_eval_negate_bool.stl
// Error: cannot negate a non-numeric value
// expect-error: Cannot negate non-numeric value
define x = (-true);
prompt p { is { f is text<length=4>; } return { use f; } }
export p as main;
